[tool.poetry]
name = "enhancesa"
version = "0.1.0"
description = "Tools for statistical analysis"
authors = ["Sina Balkhi <20431332+sinablk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.1"
statsmodels = "^0.12.0"
seaborn = "^0.10.1"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
sphinx = "^3.2.1"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["enhancesa"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
